Update for sonar issues